<resources>
    <string name="AppName">电报</string>
    <string name="AppNameBeta">电报 Beta</string>
    <string name="LanguageName">简体中文</string>
    <string name="English">英语</string>
    <string name="LanguageNameInEnglish">Simplified Chinese</string>
    <string name="LanguageCode">zh_CN</string>
    <string name="ContinueOnThisLanguage">使用简体中文继续</string>
    <string name="YourPhone">您的手机号码</string>
    <string name="StartText">请确认您的国家代码并输入您的手机号码。</string>
    <string name="ChooseCountry">选择国家</string>
    <string name="WrongCountry">国家代码无效</string>
    <string name="YourCode">手机验证</string>
    <string name="SentSmsCode">我们已经向您的手机号码 **%1$s** 发送了一条带有激活验证码的短信。</string>
    <string name="SentAppCode">我们已向您其他设备上的 **Telegram** 应用发送了一条验证码消息。</string>
    <string name="SentCallCode">我们正在呼叫您的手机 **%1$s**。\n\n请不要接听，Telegram 将会自动处理接下来的事情。</string>
    <string name="SentCallOnly">我们正在呼叫您的手机 **%1$s** 并播报验证码。</string>
    <string name="CallText">我们会在 %1$d:%2$02d 后使用电话语音播放验证码</string>
    <string name="SmsText">我们会在 %1$d:%2$02d 后给您发送短信</string>
    <string name="Calling">正在呼叫...</string>
    <string name="Code">验证码</string>
    <string name="WrongNumber">号码错误？</string>
    <string name="DidNotGetTheCode">未收到验证码？</string>
    <string name="CancelAccountReset">撤销账号重置请求</string>
    <string name="CancelAccountResetInfo">我们收到一个有访问你电话号码 **%1$s** 权限的人要求删除你的 Telegram 账号并重置两步验证密码。\n\n如果不是你本人，请输入我们刚刚通过短信发送给你的验证码。</string>
    <string name="ResetAccount">重置帐号</string>
    <string name="ResetAccountInfo">因为账号 **%1$s** 处于活动状态并且被密码保护，出于安全考虑，我们将会在一周后删除它。\n\n在此期间，您可以随时取消此过程。</string>
    <string name="ResetAccountStatus">您将能够在此时间后重置您的帐户:</string>
    <string name="ResetAccountCancelledAlert">您近期的重置账号请求被当前活动用户取消，请于 7 天后重试。</string>
    <string name="ResetAccountButton">重置帐户</string>
    <string name="CancelLinkExpired">链接无效或已过期。</string>
    <string name="CancelLinkSuccess">已取消删除您账号的注销请求 %1$s 。您现在可以关闭此窗口。</string>
    <string name="YourName">您的姓名</string>
    <string name="RegisterText">设置您的姓名</string>
    <string name="FirstName">名字（必填）</string>
    <string name="LastName">姓氏（可选）</string>
    <string name="CancelRegistration">取消注册</string>
    <string name="PaymentSuccessfullyPaid">您已成功为 %3$s 向 %2$s 转账 %1$s</string>
    <string name="PaymentSuccessfullyPaidNoItem">您已成功向 %2$s 转账 %1$s</string>
    <string name="PaymentCheckout">结算</string>
    <string name="PaymentShippingMethod">配送方式</string>
    <string name="PaymentNoShippingMethod">抱歉，无法配送至您的地址。</string>
    <string name="PaymentShippingInfo">配送信息</string>
    <string name="PaymentShippingAddress">配送地址</string>
    <string name="PaymentShippingAddress1Placeholder">地址行 1 (街道)</string>
    <string name="PaymentShippingAddress2Placeholder">地址行 2 (街道)</string>
    <string name="PaymentShippingCityPlaceholder">城市</string>
    <string name="PaymentShippingStatePlaceholder">省份</string>
    <string name="PaymentShippingCountry">国家</string>
    <string name="PaymentShippingZipPlaceholder">邮政编码</string>
    <string name="PaymentShippingReceiver">收件人</string>
    <string name="PaymentShippingName">姓名</string>
    <string name="PaymentShippingPhoneNumber">手机号码</string>
    <string name="PaymentShippingEmailPlaceholder">电子邮箱</string>
    <string name="PaymentShippingSave">保存配送信息</string>
    <string name="PaymentShippingSaveInfo">您可以保存您的配送信息以便在未来使用。</string>
    <string name="PaymentCardInfo">付款信息</string>
    <string name="PaymentCardTitle">银行卡</string>
    <string name="PaymentCardNumber">卡号</string>
    <string name="PaymentCardCvv">安全码 (CVV)</string>
    <string name="PaymentCardExpireDate">月/年</string>
    <string name="PaymentBillingAddress">账单地址</string>
    <string name="PaymentCardName">姓名</string>
    <string name="PaymentCardSavePaymentInformation">保存付款信息</string>
    <string name="PaymentCardSavePaymentInformationInfoLine1">您可以保存您的付款信息以便在未来使用。</string>
    <string name="PaymentCardSavePaymentInformationInfoLine2">请先开启“两步验证”后再启用此功能。</string>
    <string name="PaymentTransactionReview">交易检查</string>
    <string name="PaymentTransactionMessage">您确定要为 %3$s 向机器人 %2$s 转账 %1$s ？</string>
    <string name="PaymentTransactionTotal">总计</string>
    <string name="PaymentInvoice">订单</string>
    <string name="PaymentTestInvoice">测试订单</string>
    <string name="PaymentCheckoutPay">支付 %1$s</string>
    <string name="PaymentCheckoutMethod">支付方式</string>
    <string name="PaymentCheckoutProvider">支付服务提供商</string>
    <string name="PaymentCheckoutName">姓名</string>
    <string name="PaymentCheckoutPhoneNumber">手机号码</string>
    <string name="PaymentCheckoutEmail">联系方式</string>
    <string name="PaymentCheckoutShippingMethod">配送方式</string>
    <string name="PaymentReceipt">收据</string>
    <string name="PaymentConfirmationNewCard">选择另一张卡</string>
    <string name="PaymentConfirmationMessage">您曾经保存过您的银行卡 %1$s 。要使用此卡付款，请输入您的两步验证密码。</string>
    <string name="PaymentPrecheckoutFailed">抱歉，付款已被此机器人取消。</string>
    <string name="PaymentFailed">抱歉，付款被拒绝。</string>
    <string name="PaymentConnectionFailed">无法连接至支付服务器。请检查您的互联网连接并重试。</string>
    <string name="PaymentWarning">警告</string>
    <string name="PaymentWarningText">Telegram 和 %1$s 都无法获得您的信用卡信息。信用卡信息将只会被支付平台 %2$s 处理。\n\n款项款将会直接发送给 %1$s 的开发者。Telegram 不能提供任何形式的担保，继续付款所带来的风险将由您自己承担。如果遇到问题，请联系 %1$s 的开发者或者您的银行。</string>
    <string name="PaymentPassword">密码和电子邮箱</string>
    <string name="PaymentPasswordTitle">密码</string>
    <string name="PaymentPasswordEnter">请输入密码</string>
    <string name="PaymentPasswordReEnter">请再次输入密码</string>
    <string name="PaymentPasswordInfo">请创建一个用于保护您的付款信息的密码。您需要在登录时输入此密码。</string>
    <string name="PaymentPasswordEmailTitle">辅助邮箱</string>
    <string name="PaymentPasswordEmail">您的邮箱</string>
    <string name="PaymentPasswordEmailInfo">请添加您的有效邮件地址。这是唯一能够恢复忘记的密码的方法。</string>
    <string name="PaymentPhoneToProvider">电话号码将作为付款信息发送给 %1$s。</string>
    <string name="PaymentEmailToProvider">邮箱地址将作为付款信息发送给 %1$s。</string>
    <string name="PaymentPhoneEmailToProvider">电话号码和邮箱地址将作为付款信息发送给 %1$s。</string>
    <string name="NewConversationShortcut">新建对话</string>
    <string name="Settings">设置</string>
    <string name="Contacts">联系人</string>
    <string name="NewGroup">新建群组</string>
    <string name="Yesterday">昨天</string>
    <string name="NoResult">没有结果</string>
    <string name="NoChats">暂无对话...</string>
    <string name="RecentlyViewed">最近查看过</string>
    <string name="RecentlyViewedHide">隐藏</string>
    <string name="NoChatsHelp">要开始对话\n请点击右上角的撰写按钮\n或者进入联系人界面。</string>
    <string name="WaitingForNetwork">等待网络...</string>
    <string name="Connecting">连接中...</string>
    <string name="ConnectingToProxy">正在连接代理...</string>
    <string name="ConnectingToProxyTapToDisable">点按此处禁用代理...</string>
    <string name="ConnectingToProxyDisable">禁用</string>
    <string name="ConnectingToProxyEnable">启用</string>
    <string name="EnableProxyAlert">您确定要启用此代理吗？</string>
    <string name="EnableProxyAlert2">您可以稍后在设置（数据和存储）中修改您的代理服务器。</string>
    <string name="ConnectingToProxyDisableAlert">您确定要禁用代理服务器 %1$s 吗？您可以在设置（数据和存储）中重新启用它。</string>
    <string name="Updating">刷新中...</string>
    <string name="NewSecretChat">新建加密对话</string>
    <string name="AwaitingEncryption">等待%s上线...</string>
    <string name="EncryptionRejected">加密对话已取消</string>
    <string name="EncryptionProcessing">正在交换加密密钥...</string>
    <string name="EncryptedChatStartedOutgoing">%s 加入了您的加密对话。</string>
    <string name="EncryptedChatStartedIncoming">您已加入加密对话。</string>
    <string name="ClearHistory">清除聊天记录</string>
    <string name="ClearHistoryCache">清除消息缓存</string>
    <string name="DeleteChat">删除并退出群组</string>
    <string name="DeleteChatUser">删除对话</string>
    <string name="HiddenName">删除帐号</string>
    <string name="SelectChat">选择对话</string>
    <string name="ForwardTo">转发到...</string>
    <string name="DisappearingPhoto">自毁图片</string>
    <string name="DisappearingVideo">自毁视频</string>
    <string name="CompatibilityChat">%1$s 正在使用旧版 Telegram，因此图片会以兼容模式显示。\n\n当 %2$s 更新 Telegram 后，阅后即焚计时器设为1分钟以内时，图片会使用“长按预览”的模式显示；对方截屏时，您也会收到通知。</string>
    <string name="SearchMessages">搜索消息</string>
    <string name="Search">搜索</string>
    <string name="MuteNotifications">暂停消息通知</string>
    <string name="MuteFor">暂停通知 %1$s</string>
    <string name="UnmuteNotifications">恢复消息通知</string>
    <string name="WillUnmuteIn"> %1$s 后</string>
    <string name="MuteDisable">永久静音</string>
    <string name="Hashtags">标签</string>
    <string name="Recent">最近</string>
    <string name="ChatHints">对话</string>
    <string name="ChatHintsDelete">确认从建议列表中删除 %1$s 吗？</string>
    <string name="LinkPreview">链接预览</string>
    <string name="Draft">草稿</string>
    <string name="HistoryCleared">历史聊天记录已被清除</string>
    <string name="ArticleByAuthor">%1$s</string>
    <string name="ArticleDateByAuthor">%2$s 于 %1$s</string>
    <string name="PreviewFeedback">发送关于此预览的反馈</string>
    <string name="SendStickerPreview">发送贴纸</string>
    <string name="ViewPackPreview">查看对应贴纸包</string>
    <string name="PinToTop">置顶</string>
    <string name="UnpinFromTop">取消置顶</string>
    <string name="Bold">粗体</string>
    <string name="Italic">斜体</string>
    <string name="Regular">常规</string>
    <string name="ContactsPermissionAlert">为了和您认识的每个人无缝联系，请允许 **Telegram** 访问您的通讯录。</string>
    <string name="ContactsPermissionAlertNotNow">稍后</string>
    <string name="ContactsPermissionAlertContinue">继续</string>
    <string name="SetAsAdmin">设为管理员</string>
    <string name="NoBlockedUsers">暂无被封禁用户</string>
    <string name="DeleteMega">删除群组</string>
    <string name="LeaveMegaMenu">退出群组</string>
    <string name="DeleteMegaMenu">删除群组</string>
    <string name="MegaDeleteInfo">您将会丢失此群组的所有消息。</string>
    <string name="MegaAdminsInfo">您可以添加管理员帮助您管理群组。长按可删除管理员。</string>
    <string name="MegaDeleteAlert">注意！删除此群组将会移除所有成员并且会丢失所有消息。确定要删除此群组？</string>
    <string name="ActionCreateMega">群组已创建</string>
    <string name="MegaAddedBy">un1 将您添加到了此群组</string>
    <string name="MegaLeaveAlert">您确定要退出此群组吗？</string>
    <string name="GroupUserCantAdd">抱歉，您不能将此用户加入群组。</string>
    <string name="GroupUserAddLimit">抱歉，此群组已满员。</string>
    <string name="GroupUserLeftError">抱歉，该用户已决定退出此群组，您无法邀请该用户回来。</string>
    <string name="GroupUserCantAdmin">抱歉，群组内管理员人数过多。</string>
    <string name="GroupUserCantBot">抱歉，此群组的机器人数量已达上限。</string>
    <string name="ActionPinnedText">un1 置顶了 \"%1$s\"</string>
    <string name="ActionPinnedNoText">un1 置顶了 1 条消息</string>
    <string name="ActionPinnedPhoto">un1 置顶了 1 张图片</string>
    <string name="ActionPinnedVideo">un1 置顶了 1 个视频</string>
    <string name="ActionPinnedFile">un1 置顶了 1 个文件</string>
    <string name="ActionPinnedSticker">un1 置顶了 1 张贴纸</string>
    <string name="ActionPinnedVoice">un1 置顶了 1 条语音消息</string>
    <string name="ActionPinnedRound">un1 置顶了 1 条视频消息</string>
    <string name="ActionPinnedContact">un1 置顶了 1 个联系人信息</string>
    <string name="ActionPinnedGame">un1 置顶了 %1$s</string>
    <string name="ActionPinnedGeo">un1 置顶了 1 个位置</string>
    <string name="ActionPinnedGeoLive">un1 置顶了一个实时位置</string>
    <string name="ActionPinnedGif">un1 置顶了 1 个 GIF</string>
    <string name="ActionPinnedMusic">un1 置顶了 1 首音乐</string>
    <string name="ActionMigrateFromGroup">此群组已升级为超级群组</string>
    <string name="ActionMigrateFromGroupNotify">%1$s 已升级为超级群组</string>
    <string name="NoBlockedGroup">被封禁的用户将会从群组中移除，并且只有被管理员邀请才能再次加入。他们将不能使用邀请链接再次加入。</string>
    <string name="NoBlockedChannel">被封禁的用户将会从频道中移除，并且只有被管理员邀请才能再次加入。他们将不能使用邀请链接再次加入。</string>
    <string name="NewChannel">新建频道</string>
    <string name="EnterChannelName">频道名称</string>
    <string name="AddMutual">添加联系人到您的频道</string>
    <string name="ChannelUsernameHelp">人们可以与他人分享此链接，并使用Telegram的搜索找到您的频道。</string>
    <string name="chat">聊天</string>
    <string name="contacts">通讯录</string>
    <string name="discovery">发现</string>
    <string name="me">我</string>
    <string name="wallet">钱包</string>
    <string name="collection">收藏</string>
    <string name="sticker">表情</string>
</resources>