<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <xyz.wecode.blockchain.widget.UserInfoBarLayout
        android:id="@+id/userInfoBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/content_vertical_margin"
        android:layout_marginTop="@dimen/content_vertical_margin"
        app:userIcon="@mipmap/ic_default_avatar"
        app:userId="电报号：1133234"
        app:userName="兰斯洛特" />

    <xyz.wecode.blockchain.widget.LinearItemLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_common_item_bg"
        app:itemIcon="@mipmap/ic_setting_blue"
        app:itemTitle="@string/wallet" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_vertical_margin"
        android:divider="@drawable/divider_left_right_padding"
        android:orientation="vertical"
        android:showDividers="middle">

        <xyz.wecode.blockchain.widget.LinearItemLayout
            android:id="@+id/itemFavorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemIcon="@mipmap/ic_me_collect"
            app:itemTitle="@string/collection" />

        <!--<xyz.wecode.blockchain.widget.LinearItemLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:visibility="gone"-->
            <!--app:itemIcon="@mipmap/ic_setting_blue"-->
            <!--app:itemTitle="@string/gallery" />-->

        <xyz.wecode.blockchain.widget.LinearItemLayout
            android:id="@+id/itemSticker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemIcon="@mipmap/ic_me_sticker"
            app:itemTitle="@string/sticker" />
    </LinearLayout>

    <xyz.wecode.blockchain.widget.LinearItemLayout
        android:id="@+id/itemSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_vertical_margin"
        app:itemIcon="@mipmap/ic_setting_blue"
        app:itemTitle="@string/Settings" />
</LinearLayout>