<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/divider" />

    <xyz.wecode.blockchain.widget.AlphaTabsIndicator
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <xyz.wecode.blockchain.widget.AlphaTabView
            android:id="@+id/tabChat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:tabIconNormal="@mipmap/home_normal"
            app:tabIconSelected="@mipmap/home_selected"
            app:tabText="@string/chat"
            app:tabTextSize="12sp"
            app:textColorNormal="#999999"
            app:textColorSelected="#46c01b" />

        <xyz.wecode.blockchain.widget.AlphaTabView
            android:id="@+id/tabContacts"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:tabIconNormal="@mipmap/category_normal"
            app:tabIconSelected="@mipmap/category_selected"
            app:tabText="@string/contacts"
            app:tabTextSize="12sp"
            app:textColorNormal="#999999"
            app:textColorSelected="#46c01b" />

        <xyz.wecode.blockchain.widget.AlphaTabView
            android:id="@+id/tabDiscover"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:tabIconNormal="@mipmap/service_normal"
            app:tabIconSelected="@mipmap/service_selected"
            app:tabText="@string/discovery"
            app:tabTextSize="12sp"
            app:textColorNormal="#999999"
            app:textColorSelected="#46c01b" />


        <xyz.wecode.blockchain.widget.AlphaTabView
            android:id="@+id/tabMe"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:tabIconNormal="@mipmap/mine_normal"
            app:tabIconSelected="@mipmap/mine_selected"
            app:tabText="@string/me"
            app:tabTextSize="12sp"
            app:textColorNormal="#999999"
            app:textColorSelected="#46c01b" />
    </xyz.wecode.blockchain.widget.AlphaTabsIndicator>
</LinearLayout>

